--- a/index.html
+++ b/index.html
@@ -904,5 +904,6 @@
     <script src="js/main.js"></script>
     <script src="js/particles.js"></script>
     <script src="js/servicios.js"></script>
+    <script src="js/supabase.js"></script>    
 </body>
 </html>
