--- a/index.html
+++ b/index.html
@@ -254,6 +254,9 @@
                 </button>
             </div>
 
+            
+            <input type="text" id="buscador" placeholder="Buscar productos..." style="padding: 0.5rem; width: 90%; max-width: 400px; margin: 1rem auto; display: block; border: 1px solid #ccc; border-radius: 5px;">
+
             <!-- Contenedor de servicios (se llena dinámicamente) -->
             <div class="row g-4 services-container">
             </div>    
@@ -894,6 +897,7 @@
             </div>
         </div>
     </div>
+
     
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
     <!-- Bootstrap 5 JS Bundle con Popper -->
@@ -905,6 +909,6 @@
     <script src="js/main.js"></script>
     <script src="js/particles.js"></script>
     <script src="js/servicios.js"></script>
-    <script src="js/supabase.js"></script>    
+    <script src="js/supabase.js"></script>
 </body>
 </html>
