--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
         <i class="fas fa-shopping-cart" aria-hidden="true"></i>
         <span class="cart-badge">0</span>
     </button>
+
     
+    <div id="panelProveedor" class="container mt-5"></div>
+
     <!-- Barra de navegación -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
@@ -254,7 +257,7 @@
                 </button>
             </div>
 
-            
+
             <input type="text" id="buscador" placeholder="Buscar productos..." style="padding: 0.5rem; width: 90%; max-width: 400px; margin: 1rem auto; display: block; border: 1px solid #ccc; border-radius: 5px;">
 
             <!-- Contenedor de servicios (se llena dinámicamente) -->
