--- a/index.html
+++ b/index.html
@@ -908,6 +908,6 @@
     <script src="js/main.js"></script>
     <script src="js/particles.js"></script>
     <script src="js/servicios.js"></script>
-    <script src="js/supabase.js"></script>
+    <script type="module" src="js/supabase.js"></script>
 </body>
 </html>
