--- a/public/index.html
+++ b/public/index.html
@@ -165,7 +165,19 @@
     <!-- Supabase JS -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <!-- Scripts propios -->
-    <script src="/js/auth.js"></script>
     <script src="/js/app.js"></script>
+    <script src="/js/auth.js"></script>
+    <script src="/js/cart-checkout.js"></script>
+    <script src="/js/cart.js"></script>
+    <script src="/js/creditos.js"></script>
+    <script src="/js/payments.js"></script>
+    <script src="/js/products.js"></script>
+    <script src="/js/profile.js"></script>
+    <script src="/js/public.js"></script>
+    <script src="/js/realtime.js"></script>
+    <script src="/js/reviews.js"></script>
+    <script src="/js/suplier.js"></script>
+    <script src="/js/suplier-dashboard.js"></script>
+    <script src="/js/test.js"></script>
 </body>
 </html>
