--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <link rel="stylesheet" href="css/utilities.css">
 
     <!-- Favicon -->
-    <link rel="icon" href="images/logo.webp" type="favicon">
+    <link rel="icon" href="img/logo.webp" type="favicon">
 </head>
 <body>
     <!-- Preloader -->
@@ -120,7 +120,7 @@
                             </div>
                             <div class="col-lg-6 d-none d-lg-block">
                                 <div class="hero-img-container">
-                                    <img src="images/banner1.webp" alt="Hero Image" class="img-fluid rounded-4 shadow-lg hover-3d">
+                                    <img src="img/banner1.webp" alt="Hero img" class="img-fluid rounded-4 shadow-lg hover-3d">
                                 </div>
                             </div>
                         </div>
@@ -136,7 +136,7 @@
                             </div>
                             <div class="col-lg-6 d-none d-lg-block">
                                 <div class="hero-img-container">
-                                    <img src="images/banner2.webp" alt="Servicios" class="img-fluid rounded-4 shadow-lg hover-3d">
+                                    <img src="img/banner2.webp" alt="Servicios" class="img-fluid rounded-4 shadow-lg hover-3d">
                                 </div>
                             </div>
                         </div>
@@ -152,7 +152,7 @@
                             </div>
                             <div class="col-lg-6 d-none d-lg-block">
                                 <div class="hero-img-container">
-                                    <img src="images/banner3.webp" alt="Experiencia" class="img-fluid rounded-4 shadow-lg hover-3d">
+                                    <img src="img/banner3.webp" alt="Experiencia" class="img-fluid rounded-4 shadow-lg hover-3d">
                                 </div>
                             </div>
                         </div>
@@ -778,7 +778,7 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="product-gallery">
-                                <img src="" class="img-fluid rounded-3 mb-3" id="productMainImage" alt="Imagen del Producto">
+                                <img src="" class="img-fluid rounded-3 mb-3" id="productMainimg" alt="imgn del Producto">
                                 <div class="product-thumbnails">
                                     <div class="product-thumbnail active">
                                         <img src="" class="img-fluid" alt="Thumbnail 1">
@@ -865,7 +865,7 @@
                             <p>Escanea el código y envía el comprobante al WhatsApp:</p>
                             <strong class="text-primary">+51 926 447 926</strong>
                             <br>
-                            <img src="images/yape.png" alt="QR de Yape" class="img-fluid mt-2" style="max-width: 200px;">
+                            <img src="img/yape.png" alt="QR de Yape" class="img-fluid mt-2" style="max-width: 200px;">
                         </div>
                     </div>
                 </div>
